--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -45,3 +45,9 @@
 		<button class="btn btn-primary" type="submit">Submit</button>
 	</form>
 </div>
+<div class="row">
+	<form action="/courses/remove?allow=true" method="post" class="col s12">
+		<input type="hidden" name="id" value="{{course.id}}">
+		<button class="btn btn-primary" type="submit">Remove</button>
+	</form>
+</div>
