--- a/views/course.hbs
+++ b/views/course.hbs
@@ -14,11 +14,11 @@
 			</div>
 			<div class="card-action actions">
 				<a href="/courses/{{course.id}}/edit?allow=true">Edit course</a>
-				<form method="post" action="/card/add">
+				<form method="post" action="/cart/add">
 					<input type="hidden" name="id" value="{{course.id}}"/>
 					<button class="btn btn-primary"
 									type="submit">
-						Add to card
+						Add to cart
 					</button>
 				</form>
 			</div>
