--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -20,10 +20,10 @@
 				<li><a href="/add">Add</a></li>
 			{{/if}}
 
-			{{#if iscard}}
-				<li class="active"><a href="/card">Card</a></li>
+			{{#if iscart}}
+				<li class="active"><a href="/cart">Cart</a></li>
 			{{else}}
-				<li><a href="/card">Card</a></li>
+				<li><a href="/cart">Cart</a></li>
 			{{/if}}
 		</ul>
 	</div>
