--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -20,11 +20,11 @@
 							<div class="card-action actions">
 								<a href="/courses/{{id}}">Open course</a>
 								<a href="/courses/{{id}}/edit?allow=true">Edit course</a>
-								<form method="post" action="/card/add">
+								<form method="post" action="/cart/add">
 									<input type="hidden" name="id" value="{{id}}"/>
 									<button class="btn btn-primary"
 													type="submit">
-										Add to card
+										Add
 									</button>
 								</form>
 							</div>
