--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,16 +1,52 @@
 <div class="row">
 	<div class="col s12">
-		<h1>Orders Page</h1>
+		<h1 class="h1">Orders Page</h1>
 	</div>
 </div>
-<div class="row">
-	<div class="col s12">
-		{{#if orders.length}}
-			{{#each order}}
-				<div>Order</div>
-			{{/each}}
-		{{else}}
+{{#if orders.length}}
+	{{#each orders}}
+		<div class="row">
+			<div class="col s12">
+				<h5 class="h5">Order {{id}}</h5>
+				<table>
+					<thead>
+					<tr>
+						<th>Title</th>
+						<th>Amount</th>
+						<th>Price</th>
+						<th>Action</th>
+					</tr>
+					</thead>
+					<tbody>
+					{{#each courses}}
+						<tr>
+							<td>{{title}}</td>
+							<td class="j-count">{{count}}</td>
+							<td class="j-price">{{price}}</td>
+							<td>
+								<button class="btn btn-primary j-remove"
+												type="button"
+												data-id="{{id}}">
+									Remove
+								</button>
+							</td>
+						</tr>
+					{{/each}}
+					</tbody>
+				</table>
+				<p>
+					Total:
+					<strong>
+						<span class="j-price j-price-total">{{totalPrice}}</span>
+					</strong>
+				</p>
+			</div>
+		</div>
+	{{/each}}
+{{else}}
+	<div class="row">
+		<div class="col s12">
 			<p>No orders is available</p>
-		{{/if}}
+		</div>
 	</div>
-</div>
+{{/if}}
