--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -7,31 +7,22 @@
 	{{#each orders}}
 		<div class="row">
 			<div class="col s12">
-				<h5 class="h5">{{userName}}`s order</h5>
-				<table>
-					<thead>
-					<tr>
-						<th>Title</th>
-						<th>Amount</th>
-						<th>Price</th>
-					</tr>
-					</thead>
-					<tbody>
-					{{#each courses}}
-						<tr>
-							<td>{{title}}</td>
-							<td>{{count}}</td>
-							<td class="j-price">{{price}}</td>
-						</tr>
-					{{/each}}
-					</tbody>
-				</table>
-				<p>
-					Total:
-					<strong>
-						<span class="j-price">{{totalPrice}}</span>
-					</strong>
-				</p>
+				<div class="card">
+					<div class="card-content">
+						<div class="card-title">{{userName}}`s order</div>
+						<ol>
+							{{#each courses}}
+								<li>
+									{{title}} (<span class="j-price">{{price}}</span> x {{count}})
+								</li>
+							{{/each}}
+						</ol>
+						<hr>
+						<p>
+							Total: <span class="j-price">{{totalPrice}}</span>
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	{{/each}}
