[be] fixed auth page

--- a/views/partials/register-form.hbs
+++ b/views/partials/register-form.hbs
@@ -39,7 +39,7 @@
 			<input id="reg_password"
 						 type="password"
 						 class="validate"
-						 name="password"
+						 name="confirm"
 						 required>
 			<label for="reg_password">
 				Password
@@ -48,13 +48,13 @@
 	</div>
 	<div class="row">
 		<div class="input-field col s12">
-			<input id="reg_password"
+			<input id="reg_confirm"
 						 type="password"
 						 class="validate"
-						 name="checkPassword"
+						 name="confirm"
 						 required>
-			<label for="reg_password">
-				Check password
+			<label for="reg_confirm">
+				Confirm password
 			</label>
 		</div>
 	</div>
