[be] add register/login

--- a/src/views/partials/register-form.hbs
+++ b/src/views/partials/register-form.hbs
@@ -2,24 +2,14 @@
 			action="/auth/register"
 			method="post">
 	<div class="row">
-		<div class="input-field col s6">
+		<div class="input-field col s12">
 			<input id="reg_first_name"
 						 type="text"
 						 class="validate"
-						 name="firstName"
+						 name="name"
 						 required>
 			<label for="reg_first_name">
-				First Name
-			</label>
-		</div>
-		<div class="input-field col s6">
-			<input id="reg_last_name"
-						 type="text"
-						 class="validate"
-						 name="lastName"
-						 required>
-			<label for="reg_last_name">
-				Last Name
+				Name
 			</label>
 		</div>
 	</div>
@@ -39,7 +29,7 @@
 			<input id="reg_password"
 						 type="password"
 						 class="validate"
-						 name="confirm"
+						 name="password"
 						 required>
 			<label for="reg_password">
 				Password
